--- a/package.json
+++ b/package.json
@@ -2,17 +2,27 @@
   "name": "api_for_Lanisters",
   "version": "1.0.0",
   "description": "api for computing fees for payment transactions ",
-  "main": "index.js",
+  "main": "server.js",
   "repository": "https://github.com/chie7tain/api_for_Lanisters.git",
   "author": "chei7tain <fredrickokwuobi@gmail.com>",
   "license": "MIT",
   "private": null,
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon dist/index.js",
+    "start": "node server.js",
+    "dev": "nodemon dist/server.js",
     "compile": "tsc --watch"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.13",
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^17.0.21",
     "typescript": "^4.6.2"
+  },
+  "dependencies": {
+    "body-parser": "^1.19.2",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "mongoose": "^6.2.7"
   }
 }
