--- a/package.json
+++ b/package.json
@@ -20,9 +20,14 @@
     "typescript": "^4.6.2"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.180",
     "body-parser": "^1.19.2",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "fastify": "^3.27.4",
+    "fastify-swagger": "^5.0.0",
+    "lodash": "^4.17.21",
+    "memoize-one": "^6.0.0",
     "mongoose": "^6.2.7"
   }
 }
